# ModellingScripting

./: .gitignore  Geometry_scripting.ipynb  Modelling_in_python.ipynb  README.md  pyproject.toml  requirements.txt
Helper/: helper_functions.py  pyproject.toml
Jupyter_notebooks/: geoscripting.ipynb
Jupyter_notebooks/MasterclassPrep/: TestCreatingPythonCodeForModels.ipynb
Jupyter_notebooks/p3d_renderTexture/: render_textured_meshes.ipynb
ModellingInPython/: __main__.py  helper_functions.py  pt3d.py  test_numpystl.py
numpystl/: pyvenv.cfg
