[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ModellingInPython"
authors = [
    {name = "Marcus Chan", email = "marcuschanhr@gmail.com"},
]
version = "1.0.0"
description = "My package description"
requires-python = ">=3.9"
dependencies = [
  "numpy >= 1.22.4",
  "ipyvolume >= 0.6.3",
]

[tool.hatch.build.targets.wheel]
packages = ["ModellingInPython", "lab"]